Refactor code structure for improved readability and maintainability

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -40,8 +40,8 @@ const mainFeatures = [
     icon: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48" color="#000000" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.2929 2.29289C12.6834 1.90237 13.3166 1.90237 13.7071 2.29289L15.7071 4.29289C16.0976 4.68342 16.0976 5.31658 15.7071 5.70711L13.7071 7.70711C13.3166 8.09763 12.6834 8.09763 12.2929 7.70711C11.9024 7.31658 11.9024 6.68342 12.2929 6.29289L12.5858 6H8C6.34315 6 5 7.34315 5 9V15C5 16.6569 6.34315 18 8 18H16C17.6569 18 19 16.6569 19 15V10C19 9.44772 19.4477 9 20 9C20.5523 9 21 9.44772 21 10V15C21 17.7614 18.7614 20 16 20H8C5.23858 20 3 17.7614 3 15V9C3 6.23858 5.23858 4 8 4H12.5858L12.2929 3.70711C11.9024 3.31658 11.9024 2.68342 12.2929 2.29289Z" fill="currentColor"></path></svg>',
     title: 'Seamless MindBody Integration',
     description: 'Connect your MindBody account in one click. We automatically sync your classes, instructors, and member lists.',
-    image: '/src/assets/app/instructor-dashboard.png.svg',
-    imageAlt: 'Dashboard showing MindBody integration status and sync controls',
+    image: '/src/assets/app/sso.png',
+    imageAlt: 'Single sign-on interface showing MindBody integration connection',
     layout: 'text-left' // text on left, image on right
   }
 ];
